# ind_hw

./: .travis.yml  CMakeLists.txt  README.md
ci/travis/: install-linux.sh
include/: configure.h
src/: func.c  mainc.c
test/: CMakeLists.txt  testing.cpp
test/files/: add_test.txt  incorrect_data.txt  input_date.txt  input_test.txt  sort_test.txt
